--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "concurrently": "^5.1.0",
     "json-server": "^0.16.1",
+    "graphql": "^16.7.1",
+    "@apollo/gateway": "^2.4.5",
+    "@apollo/query-planner": "^2.4.5",
+    "@apollo/server": "^4.7.1",
+    "@apollo/subgraph": "^2.4.5",
     "apollo-server": "^3.12.0",
-    "graphql": "^15.0.0",
-    "@apollo/gateway": "^0.50.0",
-    "@apollo/subgraph": "^0.4.0",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "graphql-tag": "^2.12.6"
   },
   "scripts": {
     "server": "concurrently -k npm:server:*",
